Fix z-index for icons in product details page

--- a/client/src/pages/ProductDetails/components/Product/Product.scss
+++ b/client/src/pages/ProductDetails/components/Product/Product.scss
@@ -139,7 +139,7 @@
     background-color: rgb(255, 255, 255, 0.1);
     border-radius: 5px;
     padding: 6px;
-    z-index: 999;
+    z-index: 2;
   }
 
   &__desc-wrapper {
